2010-09-07  Peter Rosin  <peda@lysator.liu.se>

	Fixup texi typo in previous.
	* doc/libtool.texi (libtool script content) <postlink_cmds>:
	Add missing 'code' command.

	Convert POSIX file names to toolchain format for MSVC
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
	[cygwin, mingw, pw32, cegcc] <cl*, postlink_cmds>: Make
	sure the -outputresource: file name for the manifest tool is
	in w32 format.
	<cl*, archive_expsym_cmds>: Likewise for the MSVC command file
	containing the exports and the output file name.
	* libltdl/config/ltmain.m4sh (func_mode_link): Precalculate the
	toolchain format of the output_objdir file name and store it in
	the tool_output_objdir variable. Also replace any occurrence of
	@TOOL_OUTPUT@ in postlink_cmds with the toolchain version of the
	@OUTPUT@ content.
	* doc/libtool.texi (libtool script content): Update description
	of postlink_cmds to mention @TOOL_OUTPUT@.

2010-09-06  Peter Rosin  <peda@lysator.liu.se>

	Use func_to_tool_file instead of fix_srcfile_path.
	* libltdl/config/ltmain.m4sh (func_mode_compile): Replace the
	fix_srcfile_path hook with a call to func_to_tool_file.
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin,mingw,pw32]
	[cegcc]: Drop fix_srcfile_path.
	* doc/libtool.texi (libtool script contents): Likewise.
	* NEWS: Mention that fix_srcfile_path has been replaced.

	Convert file names to toolchain format in $NM and $AR @files.
	* libltdl/config/ltmain.m4sh (func_mode_link): When listing
	symbols and when creating archives using command files (or
	response files), make sure that both the name of the command
	file and the content are made up of file names in a format
	appropriate for the tool. Fixes stresstest.at on MSYS when
	run with low command line length.

	Convert file names to toolchain format when linking.
	* libltdl/config/ltmain.m4sh (func_mode_link): When exporting
	symbols and when linking using command files (or response